--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "lint": "eslint src --ext .ts --fix",
     "test": "jest --passWithNoTests --noStackTrace",
     "test:unit": "npm run test -- -c jest-unit.config.ts",
-    "test:staged": "npm run test -- --findRelatedTests",
     "test:integration": "npm run test -- -c jest-integration.config.ts",
     "prepare": "husky install"
   },
@@ -18,7 +17,7 @@
   "lint-staged": {
     "*.ts": [
       "npm run lint",
-      "npm run test:staged"
+      "npm run test"
     ]
   },
   "devDependencies": {
