--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "ts-node src/main/server.ts",
     "lint": "eslint src --ext .ts --fix",
     "test": "jest --passWithNoTests --noStackTrace",
-    "test:unit": "npm run test -- -c jest-unit.config.ts",
+    "test:unit": "npm run test -- --watch -c jest-unit.config.ts",
     "test:integration": "npm run test -- -c jest-integration.config.ts",
     "prepare": "husky install"
   },
