test: returns ongs on success

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint": "eslint src --ext .ts --fix",
     "test": "jest --passWithNoTests --noStackTrace",
     "test:unit": "npm run test -- --watch -c jest-unit.config.ts",
-    "test:integration": "npm run test -- -c jest-integration.config.ts",
+    "test:integration": "npm run test -- --watch -c jest-integration.config.ts",
     "prepare": "husky install"
   },
   "keywords": [],
