--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "ts-node src/main/server.ts",
-    "lint": "eslint src --ext .ts --fix",
+    "lint": "tsc && eslint src --ext .ts --fix",
     "test": "jest --passWithNoTests --noStackTrace",
     "test:unit": "npm run test -- --watch -c jest-unit.config.ts",
     "test:integration": "npm run test -- --watch -c jest-integration.config.ts",
